--- a/pages/calendar.html
+++ b/pages/calendar.html
@@ -6,7 +6,7 @@
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
     <meta content="ie=edge" http-equiv="x-ua-compatible">
     <title>NexGen Robotics</title>
-    <link href="/assets/logo.png" rel="shortcut icon" type="image/x-icon"/>
+    <link href="/assets/logo.png" rel="shortcut icon" type="image/x-icon" />
     <meta content="#0BC4B9" name="theme-color">
     <!-- Font Awesome -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css" rel="stylesheet">
@@ -22,97 +22,98 @@
 </head>
 
 <body>
-<nav class="navbar navbar-expand-md">
-    <img class="navbar-brand" src="../assets/banner-trans.png">
-    <button class="navbar-toggler" data-target="#navMenu" data-toggle="collapse" type="button">
+    <nav class="navbar navbar-expand-md">
+        <img class="navbar-brand" src="../assets/banner-trans.png">
+        <button class="navbar-toggler" data-target="#navMenu" data-toggle="collapse" type="button">
             <span class="navbar-toggler-icon">
                 <a href="#">
                     <i class="fa fa-bars"></i>
                 </a>
             </span>
-    </button>
+        </button>
 
-    <!-- Navbar Content -->
-    <div class="collapse navbar-collapse" id="navMenu">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="../index.html">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="team.html">Our Team</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="sponsors.html">Sponsors</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="calendar.html">Calendar</a>
-            </li>
-            <li class="nav-item">
-                <button class="btn btn-sm btn-yellow" type="button">
-                    <a class="nav-link" href="https://www.gofundme.com/nexgen-robotics" target="_blank">
-                        <i aria-hidden="true" class="fa fa-heart pr-2"></i>Donate</a>
-                </button>
-            </li>
-        </ul>
-    </div>
-</nav>
-
-<!-- Calendar -->
-<div class="container calendar">
-    <iframe class="image" frameborder="0" height="550vw"
-            scrolling="no"
-            src="https://calendar.google.com/calendar/embed?src=business%40dvhsrobotics.org&amp;ctz=America%2FLos_Angeles" style="border: 0" width="95%">
-    </iframe>
-</div>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<a href="./customcalendar.html"><h3 style="color: black;">Click here to go to WIP custom calendar</h3></a>
-
-<!-- Footer -->
-<div class="container-fluid dark-footer">
-    <footer class="page-footer dark-footer">
-        <div class="row">
-            <div class="col-sm-12 col-md-6 col-lg-3">
-                <h5 class="footer-heading">Team 6612
-                    <br>
-                    <h6 class="footer-subheading">NexGen Robotics</h6>
-                </h5>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-3">
-                <h5 class="footer-list-heading">Team</h5>
-                <ul class="list-unstyled footer-list">
-                    <li>
-                        <a href="team.html#team2017">2017</a>
-                    </li>
-                    <li>
-                        <a href="team.html#team2018">2018</a>
-                    </li>
-                    <li>
-                        <a href="webdevteam.html">Web Dev Team</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-3">
-                <h5 class="footer-list-heading">Contact
-                    <br>
-                    <h6 class="footer-subheading contact-email">business@dvhsrobotics.org</h6>
-                </h5>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-3">
-                <h5 class="footer-list-heading">
-                    <a href="calendar.html">Calendar</a>
-                </h5>
-                <h5 class="">
-                    <a href="sponsors.html">Sponsors</a>
-                </h5>
-            </div>
+        <!-- Navbar Content -->
+        <div class="collapse navbar-collapse" id="navMenu">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="../index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="team.html">Our Team</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="sponsors.html">Sponsors</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="calendar.html">Calendar</a>
+                </li>
+                <li class="nav-item">
+                    <button class="btn btn-sm btn-yellow" type="button">
+                        <a class="nav-link" href="https://www.gofundme.com/nexgen-robotics" target="_blank">
+                            <i aria-hidden="true" class="fa fa-heart pr-2"></i>Donate</a>
+                    </button>
+                </li>
+            </ul>
         </div>
-    </footer>
-</div>
+    </nav>
+
+    <!-- Calendar -->
+    <div class="container calendar">
+        <iframe class="image" frameborder="0" height="550vw" scrolling="no" src="https://calendar.google.com/calendar/embed?src=business%40dvhsrobotics.org&amp;ctz=America%2FLos_Angeles"
+            style="border: 0" width="95%">
+        </iframe>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <a href="./customcalendar.html">
+        <h3 style="color: black;">Click here to go to WIP custom calendar</h3>
+    </a>
+
+    <!-- Footer -->
+    <div class="container-fluid dark-footer">
+        <footer class="page-footer dark-footer">
+            <div class="row">
+                <div class="col-sm-12 col-md-6 col-lg-3">
+                    <h5 class="footer-heading">Team 6612
+                        <br>
+                        <h6 class="footer-subheading">NexGen Robotics</h6>
+                    </h5>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-3">
+                    <h5 class="footer-list-heading">Team</h5>
+                    <ul class="list-unstyled footer-list">
+                        <li>
+                            <a href="team.html#team2017">2017</a>
+                        </li>
+                        <li>
+                            <a href="team.html#team2018">2018</a>
+                        </li>
+                        <li>
+                            <a href="webdevteam.html">Web Dev Team</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-3">
+                    <h5 class="footer-list-heading">Contact
+                        <br>
+                        <h6 class="footer-subheading contact-email">business@dvhsrobotics.org</h6>
+                    </h5>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-3">
+                    <h5 class="footer-list-heading">
+                        <a href="calendar.html">Calendar</a>
+                    </h5>
+                    <h5 class="">
+                        <a href="sponsors.html">Sponsors</a>
+                    </h5>
+                </div>
+            </div>
+        </footer>
+    </div>
 </body>
 
 </html>
